objects/ssot__DigitalSignature__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalSignatureType__c</fullName>
        <label>Digital Signature Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Digital Signature Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceName__c</fullName>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignatureContextId__c</fullName>
        <label>Signature Context</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignatureContextObject__c</fullName>
        <label>Signature Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignedByName__c</fullName>
        <label>Signed By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignedDateTime__c</fullName>
        <label>Signed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291274294_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DigitalSignature_SignatureContextId__rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>DigitalSignature_SignatureContextId__rel</relationshipLabel>
        <relationshipName>rel_1720291274294_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291279533_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DigitalSignature_SignatureContextId__rel</label>
        <referenceTo>ssot__WorkOrder__dlm</referenceTo>
        <relationshipLabel>DigitalSignature_SignatureContextId__rel</relationshipLabel>
        <relationshipName>rel_1720291279533_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291859620_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DigitalSignature_SignatureContextId__rel</label>
        <referenceTo>ssot__ServiceAppointment__dlm</referenceTo>
        <relationshipLabel>DigitalSignature_SignatureContextId__rel</relationshipLabel>
        <relationshipName>rel_1720291859620_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>